authN-authZ/helm-chart-based/chatQnA_router_gateway_oauth.yaml
# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: chatqna-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - chatqna-service.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: chatqna-virtual-service
  namespace: istio-system
spec:
  gateways:
  - istio-system/chatqna-gateway
  hosts:
  - chatqna-service.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chatqna.chatqa.svc.cluster.local
        port:
          number: 8888
